<resources>
    <string name="app_name">MekeGame</string>
    <string name="_3_points">3 points</string>
    <string name="_1_points">1 points</string>
    <string name="game_over">Game Over</string>
    <string name="geno">Geno</string>
    <string name="score_550">Score: 550</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="share">Share</string>

</resources>