<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".StartActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/more"
        android:background="@drawable/ic_more"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/geno"
            android:layout_marginBottom="20dp"/>

        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/diamond"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                android:textSize="16sp"
                    android:text="@string/_3_points"
                    android:layout_margin="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/food"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/_1_points"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/enemy1"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_over"
                android:textSize="16sp"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/enemy2"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_over"
                android:textSize="16sp"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <ImageButton
            android:id="@+id/play"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_play"/>
        <ImageButton
            android:id="@+id/shop"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_baseline_shopping_cart_24"/>
    </LinearLayout>

</RelativeLayout>