<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#88808080">

        <TextView
            android:id="@+id/score_lb"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/score_550"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:onClick="pauseGame"
            android:layout_marginTop="10dp"
            android:id="@+id/pause_lb"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_baseline_pause_24"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imagdiamond"
            android:layout_width="18dp"
            android:layout_height="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/diamond"
            app:layout_constraintEnd_toStartOf="@+id/pause_lb"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="100"
            app:layout_constraintEnd_toStartOf="@+id/imagdiamond"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/startLb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_start"
            android:textSize="30sp"
            android:layout_marginTop="50sp"
            android:layout_gravity="center_horizontal" />
        
        <ImageView
            android:id="@+id/player"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/player1"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/food"
            android:src="@drawable/food"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/enemy1"
            android:src="@drawable/enemy1"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/enemy2"
            android:src="@drawable/enemy2"/>


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/diamond"
            android:src="@drawable/diamond"/>

        <FrameLayout
            android:id="@+id/frame_lp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="120dp"
                android:background="@drawable/paused" />

            <ImageButton
                android:id="@+id/start_lp"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="170dp"
                android:onClick="pauseGame"
                android:background="@drawable/ic_play" />
        </FrameLayout>

    </FrameLayout>


</LinearLayout>